# citrapad

./: CMakeLists.txt  LICENSE  README.md  main.c
src/: citrapad.c  citrapad.h  citrapad_posix.c  citrapad_win.c  joystick.c  joystick.h  main.c
